--- a/src/components/pages/dashboard/VideoList/VideoList.module.scss
+++ b/src/components/pages/dashboard/VideoList/VideoList.module.scss
@@ -188,10 +188,10 @@
 			border-width: 2px;
 
 			.scrollbar__icon {
-				transform: translateX(-0.2rem);
+				transform: translateX(-0.15rem);
 
 				&--right {
-					transform: rotate(180deg) translateX(-0.2rem);
+					transform: rotate(180deg) translateX(-0.15rem);
 				}
 			}
 		}
